--- a/i3/config
+++ b/i3/config
@@ -20,7 +20,7 @@ client.focused #4c7899 #285577 #ffffff #2e9ef4 #ff0000
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 15px
+font pango:JetBrainsMono Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
