--- a/i3/config
+++ b/i3/config
@@ -56,7 +56,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id i3-sensible-terminal -e tmux
+bindsym $mod+Return exec --no-startup-id st -e tmux
 
 # kill focused window
 bindsym $mod+Shift+q kill
