--- a/i3/config
+++ b/i3/config
@@ -132,6 +132,9 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+assign [class="Brave"] $ws3
+assign [class="Slack"] $ws4
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
