feat: move dbeaver to 5 workspace

--- a/i3/config
+++ b/i3/config
@@ -134,6 +134,7 @@ set $ws10 "10"
 
 assign [class="Brave"] $ws3
 assign [class="Slack"] $ws4
+assign [title="(?i)dbeaver"] $ws5
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
