--- a/i3/config
+++ b/i3/config
@@ -69,6 +69,9 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
+# start brave
+bindsym $mod+w exec --no-startup-id brave
+
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -104,7 +107,7 @@ bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+# bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
