--- a/i3/config
+++ b/i3/config
@@ -60,7 +60,7 @@ tiling_drag modifier titlebar
 bindsym $mod+Return exec --no-startup-id st -e tmux
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
