feat: add memory to i3status

--- a/i3status/config
+++ b/i3status/config
@@ -4,6 +4,7 @@ general {
 }
 
 order += "disk /"
+order += "memory"
 order += "battery all"
 order += "load"
 order += "tztime local"
@@ -22,4 +23,8 @@ load {
 
 disk "/" {
   format = "%avail"
+}
+
+memory {
+  format = "%available"
 }
