feat: update nvim config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,7 +13,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf reloaded' # reload configuration
+bind r source-file ~/.config/tmux/tmux.conf \; display '~/.config/tmux/tmux.conf reloaded' # reload configuration
 
 ## -- display --
 set -g base-index 1           # start windows numbering at 1
@@ -92,3 +92,8 @@ bind P choose-buffer # choose which buffer to paste from
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @yank_selection 'primary'
+
+bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/personal/dev/todo.md"
+
+# forget the find window.  That is for chumps
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
