--- a/i3/config
+++ b/i3/config
@@ -54,6 +54,9 @@ bindsym $mod+Shift+f exec --no-startup-id "st -e lfub"
 
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# bindsym XF86MonBrightnessUp exec "ddcutil setvcp 10 +10"
+# bindsym XF86MonBrightnessDown exec "ddcutil setvcp 10 -10"
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
